--- a/index.html
+++ b/index.html
@@ -6,32 +6,36 @@
 	<link rel="stylesheet" type="text/css" href="bootstrap-additions.css"></head>
 </head>
 <body>
-	<header>
-		<div class="name-nav">
-			<h1>Jon-Erik Chandler</h1>
-			<nav>
+	<header class="container">
+		<div class="row">
+			<h1 class="col-8">Jon-Erik Chandler</h1>
+			<nav class="col-4" >
 				<ul>
 					<li><a href="index.html">About </a></li>
-					<li id="portfolio"><a href="portfolio.html">Portfolio </a></li>
+					<li><a href="portfolio.html">Portfolio </a></li>
 					<li><a href="contact.html">Contact </a></li>
 				</ul>
 			</nav>
 		</div>
 	</header>
 	<div class="container">
-		<section id="main-bio">
-			<h2>About Me</h2>
-				<img id="bio-image" src="images\placeholder image.png" width="200px" alt="Placeholder Image"/>
-			<p class="bio-text">Hello! My name is Jon-Erik Chandler. I'm presently taking the Coding Bootcamp at Case Western Reserve University. I'm interested in working in web development or some related coding field.
-			<br/><br/>
-			Please find some of my work on the the portfolio page and don't hesitate to contact me on the contact page.</p>
-		</section>
-		<section id="contact-info">
-			<h3>Connect with Me</h3>
-				<a href="https://github.com/Jon-Erik"><img src="images\github-128.png" alt="GitHub Link" width="72px"></a>
-				<a href="https://www.linkedin.com/in/jon-erik-chandler-7b020479"><img src="images\linkedin-128.png" alt="LinkedIn Profile Link" width="72px"></a>
-				<a href="https://stackoverflow.com/users/8933756/jon-erik-chandler"><img src="images\stackoverflow-128.png" alt="Stack Overflow Profile Link" width="72px"></a>
-		</section>
+		<div class="row">
+			<section class="col-8">
+				<h2>About Me</h2>
+				<div>
+					<img class="col-4" src="images\placeholder image.png" width="200px" alt="Placeholder Image"/>
+					<p class="col-8">Hello! My name is Jon-Erik Chandler. I'm presently taking the Coding Bootcamp at Case Western Reserve University. I'm interested in working in web development or some related coding field.
+						<br/><br/>
+					Please find some of my work on the the portfolio page and don't hesitate to contact me on the contact page.</p>
+				</div>
+			</section class="col-sm">
+				<h3>Connect with Me</h3>
+				<br>
+					<a href="https://github.com/Jon-Erik"><img src="images\github-128.png" alt="GitHub Link" width="72px"></a>
+					<a href="https://www.linkedin.com/in/jon-erik-chandler-7b020479"><img src="images\linkedin-128.png" alt="LinkedIn Profile Link" width="72px"></a>
+					<a href="https://stackoverflow.com/users/8933756/jon-erik-chandler"><img src="images\stackoverflow-128.png" alt="Stack Overflow Profile Link" width="72px"></a>
+			</section>
+		</div>	
 	</div>
 	<footer>© Copyright 2018 Jon-Erik Chandler</footer>
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
