--- a/index.html
+++ b/index.html
@@ -1,45 +1,66 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Jon-Erik Chandler</title>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-	<link rel="stylesheet" type="text/css" href="bootstrap-additions.css"></head>
+  <title>Jon-Erik Chandler - About</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" href="bootstrap-additions.css"></head>
 </head>
 <body>
-	<header class="container">
-		<div class="row">
-			<h1 class="col-8">Jon-Erik Chandler</h1>
-			<nav class="col-4" >
-				<ul>
-					<li><a href="index.html">About </a></li>
-					<li><a href="portfolio.html">Portfolio </a></li>
-					<li><a href="contact.html">Contact </a></li>
-				</ul>
-			</nav>
-		</div>
-	</header>
-	<div class="container">
-		<div class="row">
-			<section class="col-8">
-				<h2>About Me</h2>
-				<div>
-					<img class="col-4" src="images\placeholder image.png" width="200px" alt="Placeholder Image"/>
-					<p class="col-8">Hello! My name is Jon-Erik Chandler. I'm presently taking the Coding Bootcamp at Case Western Reserve University. I'm interested in working in web development or some related coding field.
-						<br/><br/>
-					Please find some of my work on the the portfolio page and don't hesitate to contact me on the contact page.</p>
-				</div>
-			</section class="col-sm">
-				<h3>Connect with Me</h3>
-				<br>
-					<a href="https://github.com/Jon-Erik"><img src="images\github-128.png" alt="GitHub Link" width="72px"></a>
-					<a href="https://www.linkedin.com/in/jon-erik-chandler-7b020479"><img src="images\linkedin-128.png" alt="LinkedIn Profile Link" width="72px"></a>
-					<a href="https://stackoverflow.com/users/8933756/jon-erik-chandler"><img src="images\stackoverflow-128.png" alt="Stack Overflow Profile Link" width="72px"></a>
-			</section>
-		</div>	
-	</div>
-	<footer>© Copyright 2018 Jon-Erik Chandler</footer>
-	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+<div id="header" style="background-color: white">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-8 header">
+        <h1>Jon-Erik Chandler</h1>
+      </div>
+      <div class="col-sm-4">
+        <nav>
+          <ul>
+            <li><a class="navbutton" href="">About</a></li>
+            <li><a class="navbutton" href="">Portfolio</a></li>
+            <li><a class="lastbutton" href="">Contact </a></li>
+          </ul>
+        </nav>
+      </div>
+    </div>
+  </div>
+</div> 
+<div class="container maincontent">
+  <div class="row">
+    <div class="col-sm-8">
+      <h2>About Me</h2>
+      <div class="container">
+        <div class="row">
+          <div class="bio-picture col-sm-4">
+            <div>
+              <img src="images/placeholder image.png" width="100%">
+            </div>
+          </div>
+          <div class="col-sm-8">
+            <p>Hello! My name is Jon-Erik Chandler. I'm presently taking the Coding Bootcamp at Case Western Reserve University. I'm interested in working in web development or some related coding field.
+              <br/><br/>
+            Please find some of my work on the the portfolio page and don't hesitate to contact me on the contact page.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="connect col-sm-4">
+      <h3>Connect with Me</h3>
+      <div>
+          <a href="https://github.com/Jon-Erik">
+            <img src="images\github-128.png" alt="GitHub Link" width="31%"></a>
+          <a href="https://www.linkedin.com/in/jon-erik-chandler-7b020479">
+            <img src="images\linkedin-128.png" alt="LinkedIn Profile Link" width="31%"></a>
+          <a href="https://stackoverflow.com/users/8933756/jon-erik-chandler">
+            <img src="images\stackoverflow-128.png" alt="Stack Overflow Profile Link"
+            width="31%"></a>
+            <br>
+      </div>
+    </div>
+  </div>
+</div>
+<footer id="footer">© Copyright 2018 Jon-Erik Chandler</footer>
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
 </html>
