--- a/portfolio.html
+++ b/portfolio.html
@@ -1,48 +1,54 @@
+
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Jon-Erik Chandler - Portfolio</title>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-	<link rel="stylesheet" type="text/css" href="bootstrap-additions.css"></head>
+  <title>Jon-Erik Chandler - Contact Information</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" href="bootstrap-additions.css"></head>
+</head>
 <body>
-	<header>
-		<div class="name-nav">
-			<h1>Jon-Erik Chandler</h1>
-			<nav>
-				<ul>
-					<li><a href="index.html">About </a></li>
-					<li id="portfolio"><a href="portfolio.html">Portfolio </a></li>
-					<li><a href="contact.html">Contact </a></li>
-				</ul>
-			</nav>
-		</div>
-	</header>
-	<div class="container">
-	<section id="main-bio">
-	<h2>Portfolio</h2>
-		<div class="projectlist">
-			<img id="firstimage" src="images/ear buds picture.jpg">
-			<div class="caption1">Future Project 1</div>
-			<img id="secondimage" src="images/technics-q-c-640-480-1.jpg">
-			<div class="caption2">Future Project 2</div>
-			<img id="thirdimage" src="images/technics-q-c-640-480-2.jpg">
-			<div class="caption3">Future Project 3</div>
-			<img id="fourthimage" src="images/technics-q-c-640-480-7.jpg">
-			<div class="caption4">Future Project 4</div>
-			<img id="fifthimage" src="images/technics-q-c-640-480-9.jpg">
-			<div class="caption5">Future Project 5</div>
-		</div>
-	</section>
-	<section id="contact-info">
-			<h3>Connect with Me</h3>
-				<a href="https://github.com/Jon-Erik"><img src="images\github-128.png" alt="GitHub Link" width="72px"></a>
-				<a href="https://www.linkedin.com/in/jon-erik-chandler-7b020479"><img src="images\linkedin-128.png" alt="LinkedIn Profile Link" width="72px"></a>
-				<a href="https://stackoverflow.com/users/8933756/jon-erik-chandler"><img src="images\stackoverflow-128.png" alt="Stack Overflow Profile Link" width="72px"></a>
-		</section>
-	</div>
-	<footer>© Copyright 2018 Jon-Erik Chandler</footer>
-	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+<div id="header" style="background-color: white">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-8 header">
+        <h1>Jon-Erik Chandler</h1>
+      </div>
+      <div class="col-sm-4">
+        <nav>
+          <ul>
+            <li><a class="navbutton" href="">About</a></li>
+            <li><a class="navbutton" href="">Portfolio</a></li>
+            <li><a class="lastbutton" href="">Contact </a></li>
+          </ul>
+        </nav>
+      </div>
+    </div>
+  </div>
+</div> 
+<div class="container maincontent">
+  <div class="row">
+    <div class="col-sm-8">
+      <h2>Portfolio</h2>
+		
+    </div>
+    <div class="connect col-sm-4">
+      <h3>Connect with Me</h3>
+      <div>
+          <a href="https://github.com/Jon-Erik">
+            <img src="images\github-128.png" alt="GitHub Link" width="31%"></a>
+          <a href="https://www.linkedin.com/in/jon-erik-chandler-7b020479">
+            <img src="images\linkedin-128.png" alt="LinkedIn Profile Link" width="31%"></a>
+          <a href="https://stackoverflow.com/users/8933756/jon-erik-chandler">
+            <img src="images\stackoverflow-128.png" alt="Stack Overflow Profile Link"
+            width="31%"></a>
+            <br>
+      </div>
+    </div>
+  </div>
+</div>
+<footer id="footer">© Copyright 2018 Jon-Erik Chandler</footer>
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
 </html>
