--- a/bootstrap portfolio format.html
+++ b/bootstrap portfolio format.html
@@ -18,30 +18,31 @@
   <div class="row">
     <div class="col-sm-8">
       <h2>Header 2</h2>
-        <div class="container">
-          <div class="row">
-            <div class="col-sm-6" style="background-color:yellow;">
-              <p>project</p>
-            </div>
-            <div class="col-sm-6" style="background-color:pink;">
-              <p>project</p>
+        <div class="card-deck">
+          <div class="card">
+            <img class="card-img" src="images/ear buds picture.jpg" alt="Card image">
+            <div class="card-img-overlay">
+              <h5 class="card-title">Card title</h5>
             </div>
           </div>
-          <div class="row">
-            <div class="col-sm-6" style="background-color:yellow;">
-              <p>project</p>
-            </div>
-            <div class="col-sm-6" style="background-color:pink;">
-              <p>project</p>
-            </div>
+          <div class="card">
+            <img class="card-img-top" src="..." alt="Card image cap">
           </div>
-          <div class="row">
-            <div class="col-sm-6" style="background-color:yellow;">
-              <p>project</p>
-            </div>
-            <div class="col-sm-6" style="background-color:pink;">
-              <p>project</p>
-            </div>
+        </div>
+        <div class="card-deck">
+          <div class="card">
+            <img class="card-img-top" src="..." alt="Card image cap">
+          </div>
+          <div class="card">
+            <img class="card-img-top" src="..." alt="Card image cap">
+          </div>
+        </div>
+        <div class="card-deck">
+          <div class="card">
+            <img class="card-img-top" src="..." alt="Card image cap">
+          </div>
+          <div class="card">
+            <img class="card-img-top" src="..." alt="Card image cap">
           </div>
         </div>
       </div>
@@ -49,6 +50,7 @@
       <h3>Header 3</h3>
       <div>links here</div>
     </div>
+  </div>
 </div>
 <footer>This is a footer</footer>
 </body>
