--- a/contact.html
+++ b/contact.html
@@ -15,9 +15,9 @@
       <div class="col-sm-4">
         <nav>
           <ul>
-            <li><a class="navbutton" href="">About</a></li>
-            <li><a class="navbutton" href="">Portfolio</a></li>
-            <li><a class="lastbutton" href="">Contact </a></li>
+            <li><a class="navbutton" href="index.html">About</a></li>
+            <li><a class="navbutton" href="portfolio.html">Portfolio</a></li>
+            <li><a class="lastbutton" href="contact.html">Contact </a></li>
           </ul>
         </nav>
       </div>
