--- a/portfolio.html
+++ b/portfolio.html
@@ -16,9 +16,9 @@
       <div class="col-sm-4">
         <nav>
           <ul>
-            <li><a class="navbutton" href="">About</a></li>
-            <li><a class="navbutton" href="">Portfolio</a></li>
-            <li><a class="lastbutton" href="">Contact </a></li>
+            <li><a class="navbutton" href="index.html">About</a></li>
+            <li><a class="navbutton" href="portfolio.html">Portfolio</a></li>
+            <li><a class="lastbutton" href="contact.html">Contact </a></li>
           </ul>
         </nav>
       </div>
@@ -29,7 +29,49 @@
   <div class="row">
     <div class="col-sm-8">
       <h2>Portfolio</h2>
-		
+		<div class="card-deck">
+          <div class="card">
+            <img class="card-img" src="images/ear buds picture.jpg" alt="Card image">
+            <div class="card-img-overlay">
+              <h5 class="card-title">Project title</h5>
+            </div>
+          </div>
+          <div class="card">
+            <img class="card-img" src="images/technics-q-c-640-480-1.jpg" alt="Card image">
+            <div class="card-img-overlay">
+              <h5 class="card-title">Project title</h5>
+            </div>
+          </div>
+        </div>
+        <div class="card-deck">
+          <div class="card">
+            <img class="card-img" src="images/technics-q-c-640-480-2.jpg" alt="Card image">
+            <div class="card-img-overlay">
+              <h5 class="card-title">Project title</h5>
+            </div>
+          </div>
+          <div class="card">
+            <img class="card-img" src="images/technics-q-c-640-480-7.jpg" alt="Card image">
+            <div class="card-img-overlay">
+              <h5 class="card-title">Project title</h5>
+            </div>
+          </div>
+        </div>
+        <div class="card-deck">
+          <div class="card">
+            <img class="card-img" src="images/technics-q-c-640-480-9.jpg" alt="Card image">
+            <div class="card-img-overlay">
+              <h5 class="card-title">Project title</h5>
+            </div>
+          </div>
+          <div class="card">
+            <img class="card-img" src="images/ear buds picture.jpg" alt="Card image">
+            <div class="card-img-overlay">
+              <h5 class="card-title">Project title</h5>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
     <div class="connect col-sm-4">
       <h3>Connect with Me</h3>
