--- a/portfolio.html
+++ b/portfolio.html
@@ -11,7 +11,9 @@
   <div class="container">
     <div class="row">
       <div class="col-sm-8 header">
-        <h1>Jon-Erik Chandler</h1>
+        <div class="h1containter">
+          <h1>Jon-Erik Chandler</h1>
+        </div>
       </div>
       <div class="col-sm-4">
         <nav>
@@ -72,8 +74,7 @@
           </div>
         </div>
       </div>
-    </div>
-    <div class="connect col-sm-4">
+      <div class="connect col-sm-4">
       <h3>Connect with Me</h3>
       <div>
           <a href="https://github.com/Jon-Erik">
@@ -83,7 +84,7 @@
           <a href="https://stackoverflow.com/users/8933756/jon-erik-chandler">
             <img src="images\stackoverflow-128.png" alt="Stack Overflow Profile Link"
             width="31%"></a>
-            <br>
+        </div>
       </div>
     </div>
   </div>
