replaced bio with lorem ipsum;

--- a/index.html
+++ b/index.html
@@ -36,9 +36,7 @@
             </div>
           </div>
           <div class="col-sm-8">
-            <p>Hello! My name is Jon-Erik Chandler. I'm presently taking the Coding Bootcamp at Case Western Reserve University. I'm interested in working in web development or some related coding field.
-              <br/><br/>
-            Please find some of my work on the the portfolio page and don't hesitate to contact me on the contact page.</p>
+            <p>Lorem ipsum adipisicing culpa est et cillum amet officia dolore in duis dolore aliquip culpa amet qui eiusmod quis velit ea sed enim incididunt eu dolore irure dolore duis fugiat proident et culpa ad excepteur culpa aute.</p>
           </div>
         </div>
       </div>
